<resources>
    <string name="app_name">AIwater</string>

    主页面
    <string name="button">Login</string>
    <string name="Button">Register</string>
    <string name="Username">username</string>
    <string name="Passwd">passwd</string>
    <string name="用户名">用户名：</string>
    <string name="密码">密码：</string>'
    <string name="AI">智能浇花</string>

    控制页面
    <string name="humid">湿度控制</string>
    <string name="temperature">温度控制</string>
    <string name="hold">水分保持</string>
    <string name="cert">确定</string>

    <string name="return_">返回</string>


</resources>
